Update KillauraEntitySelectorGUI.java